--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
